# mineserver

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.noiseutils  Makefile  Makefile.simple  README  README.md  README.rst  config.mk  subdir.mk
CMakeModules/: FindEvent.cmake  FindNoise.cmake  toolchain-i686-w64-mingw32.cmake
files/: CMakeLists.txt  ENABLED_RECIPES.cfg  Makefile  banned.txt  commands.cfg  config.cfg  item_alias.cfg  permissions.txt  rules.txt  test.lua
files/recipes/armour/: boots_diamond.recipe  boots_gold.recipe  boots_leather.recipe  chestplate_iron.recipe  helmet_chain.recipe  legging_chain.recipe  legging_gold.recipe
files/recipes/cloth/: black.recipe  blue.recipe  darkgreen.recipe  grey.recipe  magenta.recipe  (+9 more)
include/: chunkmap.h  cliScreen.h  config.h  configure.h  constants.h  constants_num.h  entity.h  explosion.h  extern.h  furnaceManager.h  inventory.h  lighting.h  logger.h  map.h  metadata.h  mineserver.h  mob.h  packets.h  physics.h  plugin.h  plugin_api.h  protocol.h  random.h  redstoneSimulation.h  sockets.h  stdtime.h  tools.h  tree.h  user.h  vehicle.h
init.d/: mineserver.centos
mineserver/: mineserver.sln  mineserver.vcxproj  mineserver.vcxproj.filters  mineserver_banplugin.vcxproj  mineserver_banplugin.vcxproj.filters
mineserver/vs2008/: mineserver.sln  mineserver.vcproj
plugins/: CMakeLists.txt  Makefile  Makefile.inc  plugins.mk
plugins/binlog/: Makefile  binlog.cfg  binlog.cpp  binlog.h
plugins/binlog/src/: Makefile  binlog.cpp  binlog.h  binlogdump.cpp
plugins/commands/: Makefile  command.cpp  commands.cpp  commands.h  makefile  mineserver_plugintest.vcxproj  mineserver_plugintest.vcxproj.filters  plugin_commands.vcxproj  plugin_commands.vcxproj.filters
plugins/commands/src/: command.cpp
plugins/crapMobs/: Makefile  crapMobs.cpp
plugins/cursesui/: Makefile  cursesui.vcxproj  cursesui.vcxproj.filters  makefile  screen.cpp  screen.h
plugins/filelog/: Makefile  filelog.cpp  makefile  mineserver_filelog.vcxproj  mineserver_filelog.vcxproj.filters
plugins/filelog/src/: filelog.cpp
plugins/flatpermissions/: flatpermissions.cpp
plugins/luascript/: luascript.cpp  luawrapper.cpp  luawrapper.h
plugins/nBreak/: Makefile  nBreak.cpp
plugins/nether/: Makefile  nether.cpp
plugins/passiveMobs/: Makefile  passiveMobs.cpp  passiveMobs.h  plugin_passivemobs.vcxproj  plugin_passivemobs.vcxproj.filters
plugintest/: mineserver_plugintest.vcxproj  mineserver_plugintest.vcxproj.filters  test_4.cpp
plugintest/src/: command.cpp  command.h  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp
src/: .gitignore  CMakeLists.txt  DisplayRawSocket.cpp  DisplayRawSocket.h  DisplaySocket.cpp  DisplaySocket.h  Makefile  MineServer.i  StatusHandler.cpp  StatusHandler.h  SystemExceptions.h  admin.txt  chat.cpp  chat.h  chunkmap.h  cliScreen.cpp  cliScreen.h  commands.cpp  commands.cpp.unused  config.cfg  config.cpp  config.h  configure.h  configure.h.in  constants.cpp  constants.h  constants_num.h  cursesScreen.cpp  cursesScreen.h  drawBoard.h  entity.cpp  explosion.cpp  extern.h  fastset.h  forester.cpp  forester.h  furnace.cpp  furnace.h  furnaceManager.cpp  furnaceManager.h  (+81 more)
src/Sockets-2.3.9.3/: Base64.cpp  Base64.h  Changelog  Exception.cpp  Exception.h  File.h  IBase.h  IFile.h  IMutex.h  ISocketHandler.h  IStream.h  Ipv4Address.cpp  Ipv4Address.h  Ipv6Address.h  ListenSocket.h  Lock.cpp  Lock.h  MemFile.cpp  MemFile.h  Mutex.cpp  Mutex.h  Parse.cpp  Parse.h  README  ResolvSocket.cpp  ResolvSocket.h  SctpSocket.cpp  SctpSocket.h  Semaphore.cpp  Semaphore.h  Socket.cpp  Socket.h  SocketAddress.h  SocketHandler.cpp  SocketHandler.h  SocketHandlerEp.cpp  SocketHandlerEp.h  SocketHandlerThread.cpp  SocketHandlerThread.h  SocketStream.cpp  (+22 more)
src/Sockets-2.3.9.3/tests/: Makefile  base64.cpp  chunked.cpp  copy.cpp  crlf.cpp  echoserver.cpp  events.cpp  http.cpp  http_post.cpp  httpd.cpp  httpd_test.cpp  https.cpp  listener.cpp  resolve.cpp  resume.cpp  retry.cpp  scanr.cpp  semtest.cpp  sloppy_http.cpp  sockets_test.cpp  stressclient.cpp  threadstress.cpp  x.cpp
src/blocks/: base.cpp  base.h  basic.cpp  basic.h  bed.cpp  bed.h  blockbrewingstand.cpp  blockbrewingstand.h  blockfurnace.cpp  blockfurnace.h  cake.cpp  cake.h  chest.cpp  chest.h  default.cpp  default.h  door.cpp  door.h  dyed.cpp  dyed.h  falling.cpp  falling.h  fire.cpp  fire.h  ice.cpp  ice.h  jackolantern.cpp  jackolantern.h  ladder.cpp  ladder.h  leaves.cpp  leaves.h  liquid.cpp  liquid.h  note.cpp  note.h  planks.cpp  planks.h  plant.cpp  plant.h  (+26 more)
src/config/: lexer.cpp  lexer.h  node.cpp  node.h  parser.cpp  parser.h  scanner.cpp  scanner.h
src/delegate/: delegate.hpp
src/delegate/detail/: delegate_list.hpp  delegate_template.hpp
src/inventory/: inventoryBasic.cpp  inventoryBrewingstand.cpp  inventoryBrewingstand.h  inventoryChest.cpp  inventoryChest.h  inventoryFurnace.cpp  inventoryFurnace.h  inventoryPlayer.cpp  inventoryPlayer.h  inventoryWorkbench.cpp  inventoryWorkbench.h  inventorybasic.h
src/items/: basic.cpp  basic.h  food.cpp  food.h  itembasic.cpp  itembasic.h  projectile.cpp  projectile.h
src/plugins/: banlist.cpp  banlist.h
src/plugins/PyScript/: .gitignore  MineServer.i  PyScript.cpp  PyScript.h  main.cpp  makefile  python_plugin_api.cpp  python_plugin_api.h
src/plugins/PyScript/python/: TriggTest.py
src/plugins/banlist/: banlist.cpp  banlist.cpp.unused  banlist.h
src/plugins/command/: command.cpp.unused  command.h
src/plugins/commands/: command.cpp
src/plugins/nether/: nether.cpp
src/world/: cavegen.cpp  cavegen.h
src/worldgen/: biomegen.cpp  biomegen.h  cavegen.cpp  cavegen.h  eximgen.cpp  eximgen.h  heavengen.cpp  heavengen.h  mapgen.cpp  mapgen.h  mersenne.cpp  nethergen.cpp  nethergen.h  noiseutils.cpp  noiseutils.h
src/zlib/: compress.c  uncompr.c  zconf.h  zlib.h
win32/: mineserver.vcxproj  mineserver.vcxproj.filters  mineserver_VS2010.sln  mineserver_VS2013.sln
win32/plugins/: plugin_commands.vcxproj  plugin_filelog.vcxproj  plugin_flatpermissions.vcxproj  plugin_luascript.vcxproj  plugin_passivemobs.vcxproj
(+72 files in other folders)
